--- a/SignalRChat/assets/css/main.css
+++ b/SignalRChat/assets/css/main.css
@@ -60,6 +60,8 @@ right:0px;
     margin-left:30px;
     position:relative;
     display:inline-block;
+    box-shadow: 1px 2px 7px grey;
+    background: white;
 }
 
 .chat-text:before {
@@ -96,6 +98,8 @@ right:0px;
     margin-right:30px;
     position:relative;
     display:inline-block;
+    box-shadow: 1px 2px 7px grey;
+    background: white;
 }
 
 .chat-text-right:before {
@@ -123,3 +127,28 @@ right:0px;
     bottom: 5px;
 
 }
+
+body {
+    background-image: url('../images/weather.png');
+}
+
+.panel-body {
+     background-image: url('../images/rockywall.png');
+}
+/*body {
+
+background: 
+radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%),
+radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%),
+radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%),
+radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%),
+radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%),
+
+radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
+radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
+radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
+radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
+radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%) 50px 50px;
+background-color:#b03;
+background-size:100px 100px;
+}*/
